--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
     "firebase": "^11.9.1",
     "genkit": "^1.20.0",
     "lucide-react": "^0.475.0",
+    "mysql2": "^3.10.1",
     "next": "15.5.9",
     "patch-package": "^8.0.0",
-    "react": "experimental",
+    "react": "latest",
     "react-day-picker": "^9.11.3",
-    "react-dom": "experimental",
+    "react-dom": "latest",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
